--- a/src/DailyMeals.css
+++ b/src/DailyMeals.css
@@ -1,30 +1,62 @@
 .dailyMeals {
-	margin-top: 50px;
-	height: 70vh;
+	height: 80vh;
 	display: flex;
-	align-self: center;
+}
+
+.dailyMeals__search {
+	width: 70%;
+	display: flex;
 	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 .dailyMeals__left {
-	width: 35%;
+	margin-left: 180px;
+	width: 33%;
 	display: flex;
+	align-items: center;
+}
+
+.dailyMeals__left > form > input {
+	height: 30px;
+	margin-bottom: 13px;
+	width: 70%;
+}
+
+.dailyMeals__vegetarian {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	margin-bottom: 13px;
+	width: 70%;
+	color: #fff;
+}
+
+.dailyMeals__vegetarian > input {
+	border-radius: 12px;
+	height: 30px;
+	width: 20px;
+	margin-left: 10px;
 	justify-content: center;
 	align-items: center;
 }
 
-.dailyMeals__right {
-	width: 49%;
-}
-
-.dailyMeals__left > form > input {
-	height: 20px;
-	width: 99%;
+.dailyMeals__vegetarian > label {
+	font-size: 22px;
 }
 
 .dailyMeals__submit {
-	border-radius: 2px;
-	width: 100%;
-	height: 20px;
+	border-radius: 12px;
+	width: 70%;
+	height: 30px;
 	border: 1px solid;
+}
+
+.dailyMeals__list {
+	height: 100vh;
+}
+
+.test {
+	height: 100vh;
 }
