--- a/src/Meal.css
+++ b/src/Meal.css
@@ -1,4 +1,36 @@
+.meal {
+	color: #fff;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 2rem;
+	margin: 0 1rem;
+	max-width: 18rem;
+	box-shadow: 22px 14px 18px 12px rgba(0, 0, 0, 0.15);
+	border: 1px solid #ccc;
+}
+
+h1 {
+	font-size: 22px;
+	margin-bottom: 15px;
+}
+
 img {
 	height: 250px;
 	width: 350px;
+}
+
+.meal__instructions {
+	font-size: 0.9rem;
+	margin-bottom: 1rem;
+	margin-top: 1rem;
+}
+
+.meal__link {
+	color: black;
+	font-size: 14px;
+	background: #fff;
+	padding: 5px;
+	border-radius: 7px;
 }
